--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -15,11 +15,16 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-# eventually we'll do this
-# devtools::install_github("cmilando/getANCHOR")
-# library(getANCHOR)
-
 # but for now you can do
-devtools::install_github("https://github.com/cmilando/getANCHOR")
-remove.packages("getANCHOR")
+devtools::install_github("cmilando/getANCHOR")
+library(getANCHOR)
+```
+
+In order for the functions to work, you will need to know where to point it. 
+For this, you have to use the ANCHOR config file. When you get the file location,
+use the following command to access. This only has to be done once. 
+
+```{r config}
+CONFIG_FNAME = "*****/*****/*****/*****.RDS"
+set_config(CONFIG_FNAME)
 ```
